$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-5 (opened May 21, 2010)

	* mantel.correlog: changes the Sturge's rule to conform with the
	standard R nclass.Sturges ('ceiling' instead of 'round'. Extends
	and corrects documentation and messages.

Version 1.18-4 (closed May 21, 2010)

	* envfit: defaults now to 999 permutations. Used to be 0 or no
	permutations. 

	* metaMDS: can handle NA values in dissimilarities (but I do not
	know if isoMDS can handle them correctly).

	* mantel.correlog: accepts now user supplied breakpoints or number
	of classes like intended.

	* RsquareAdj.rda: uses now correct model df in rank deficit RDA
	models. 

	* adonis: implemented tie handling in permutations. 

	* predict.cca/rda: implemented 'newdata' for type =
	"response". For CCA, 'newdata' must be constraints (environmental
	data), and for CA they must be community data. Test version, not
	yet documented (except here).

Version 1.18-3 (closed April 15, 2010)

	* new version opened with the release of vegan 1.17-2 (March 8,
	2010). 

	* DESCRIPTION: Corrected the name of Bob O'Hara (also in release
	1.17-2). 

	* scores.cca/scores.rda: scores will always have names even if the
	input data have no names. This fixes some display issues that
	Pierre Legendre had with biplot.rda(), and makes redundant the
	name checking code in summary.cca (the redundant code was not yet
	removed, but I see that this fix here was sound).

	* permutest.cca: re-weighting of permuted CCA data matrix is now
	done with compiled code using existing C function 'wcentre' (in
	goffactor.c). This may give huge speed-up (>50% time save in first
	tests) both in CCA and pCCA.  The print function of permutest puts
	now the observed statistic among permutations (the P-value is only
	evaluated at printing so that this does not influence any
	anova.cca function using permutest.cca).
	
Version 1.18-2 (closed March 8, 2010)
